lang.java.statics.test/tests/interfaces/implementswithcontravariantreturn.no.spt
module interfaces/implementswithcontravariantreturn_no

language metaborg-java

test implementswithcontravariantreturn [[

test;



// error: m.* in A cannot implement m.* in I

[I]
interface I {
  public B m();
}

[A]
class A implements I {
  public A m() {
    return null;
  }
}

[B]
class B extends A {}

]] analysis fails
   run javacFails to ""
